syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mininetflix.backend.common.proto";

message GrpcStringRequest {
  string authKey = 1;
  string value = 2;
}

message GrpcStringResponse {
  int32 errCode = 1;
  string errMsg = 2;
  string value = 3;
}

message GrpcMultiStringRequest {
  string authKey = 1;
  repeated string value = 2;
}

message GrpcMultiStringResponse {
  int32 errCode = 1;
  string errMsg = 2;
  repeated string value = 3;
}

message GrpcBooleanResponse {
  int32 errCode = 1;
  string errMsg = 2;
  bool value = 3;
}

message GrpcInt64Request {
  string authKey = 1;
  int64 value = 2;
}

message GrpcInt64Response {
  int32 errCode = 1;
  string errMsg = 2;
  int64 value = 3;
}

message GrpcMultiInt64Request {
  string authKey = 1;
  repeated int64 value = 2;
}

message GrpcMultiInt64Response {
  int32 errCode = 1;
  string errMsg = 2;
  repeated int64 value = 3;
}

enum GrpcMiniNetflixVideoStatus {
  MNVS_UNKNOWN = 0;
  MNVS_CREATED = 1;
  MNVS_NOW_SHOWING = 2;
  MNVS_ENDED = 3;
}