syntax = "proto3";

import "mini_netflix_common.proto";

option java_multiple_files = true;
option java_package = "com.mininetflix.video.catalog.service.proto";

message GrpcVideoMetadata {
  string videoId = 1;
  string title = 2;
  string description = 3;
  string url = 4;
  string thumbnailUrl = 5;
  string genre = 6;
  string author = 7;
  string publisher = 8;
  int32 status = 9;
  int64 createdTime = 10;
  int64 updatedTime = 11;
  int64 showingFromTime = 12;
  int64 showingToTime = 13;
}

message GrpcVideoMetadataResponse {
  int32 errCode = 1;
  string errMsg = 2;
  GrpcVideoMetadata videoMetadata = 3;
}

message GrpcMultiVideoMetadataResponse {
  int32 errCode = 1;
  string errMsg = 2;
  repeated GrpcVideoMetadata videoMetadata = 3;
}

message GrpcCreateVideoMetadataRequest {
  string authKey = 1;
  GrpcVideoMetadata videoMetadata = 2;
}

service MiniNetflixVideoCatalogService {
  rpc createVideoMetadata(GrpcCreateVideoMetadataRequest) returns (GrpcStringResponse) {}
  rpc getVideoMetadataById(GrpcStringRequest) returns (GrpcVideoMetadataResponse) {}
  rpc multiGetVideoMetadataById(GrpcMultiStringRequest) returns (GrpcMultiVideoMetadataResponse) {}
}